# icl-structural-influence

./: .gitignore  CLAUDE.md  README.md  analyze_within_cluster_structure.py  analyze_within_structure_detailed.py  chain_graph_perplexity.py  chain_perplexity_experiment.py  compare_influence_metrics.py  compare_models_park.py  context_switch_experiment.py  context_switch_v2.py  context_switch_v3.py  context_switch_v4.py  context_switch_v4_log.py  generate_money_plot.py  investigate_cosine_similarity_baseline.py  log_incongruous_injection_to_wandb.py  log_loo_extended_to_wandb.py  log_loo_metric_comparison_to_wandb.py  log_mds_wandb.py  log_multilayer_loo_to_wandb.py  log_park_to_wandb.py  log_permutation_comparison_to_wandb.py  log_to_wandb.py  log_variance_to_wandb.py  monitor_full_experiment.sh  park_comparison_plot.py  plot_phase_transition.py  plot_semantic_override_trajectory.py  plot_semantic_override_with_variance.py  pyproject.toml  requirements.txt  run_block_permutation_experiment.py  run_bp_now.py  run_experiment.py  run_full_multilayer_experiment.sh  run_hierarchy_and_semantic_experiments.py  run_hierarchy_mds_plots.py  run_incongruous_injection_experiment.py  run_lee_et_al_experiments.py  (+8 more)
docs/: ARCHITECTURE.md  EXPERIMENTS.md  EXPERIMENT_PLAN_LEE_ET_AL.md  SETUP.md  alternative_influence_metrics.md  block_permutation_experiment.md  conversation_summary_block_permutation.md
experiments/: 2026-01-21_incongruous-injection-fine-granularity.md  2026-01-21_multilayer-loo-bounded-phi.md  2026-01-22_incongruous-injection-500samples.md  2026-01-22_superposition-collapse-llama31.md  2026-02-09_collapse-over-context.md  2026-02-09_collapse-reversal.md  2026-02-17_probing-collapse-performance.md  experiment_log.md
(+187 files in other folders)
