[project]
name = "icl-structural-influence"
version = "0.1.0"
description = "Research on how in-context examples influence geometric structures in LLM representations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Research Team" }]
keywords = ["llm", "in-context-learning", "mechanistic-interpretability", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.36.0,<5.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "networkx>=3.0,<4.0",
    "matplotlib>=3.7.0,<4.0.0",
    "tqdm>=4.65.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]
full = [
    "wandb>=0.15.0,<1.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "imageio>=2.9.0,<3.0.0",
    "imageio-ffmpeg",
]

[project.urls]
Homepage = "https://github.com/superkaiba/icl-structural-influence"
Repository = "https://github.com/superkaiba/icl-structural-influence"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]
